fix: 💄 adjusted top menu on mobile

--- a/component/MainLayout/Menu/Menu.module.scss
+++ b/component/MainLayout/Menu/Menu.module.scss
@@ -49,7 +49,7 @@
     gap: 5%;
 
     @media screen and (max-width: 810px) {
-      flex-basis: 75%;
+      flex-basis: 60%;
     }
 
     .socials {
